# GridSearch

./: CMakeLists.txt  README.md
src/gridsearch/: CMakeLists.txt  GridSearch.cpp  GridSearch.h
test/gridsearch/: CMakeLists.txt  app.cpp
test/gridsearch/config/: gridSearchConfig.json
